allow examples to be built without libsequence

--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -86,19 +86,14 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@noinst_PROGRAMS = diploid_ind$(EXEEXT) \
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	diploid_binaryIO_ind$(EXEEXT) \
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	diploid_gzbinaryIO_ind$(EXEEXT) \
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	diploid_fixed_sh_ind$(EXEEXT) \
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	migsel_ind$(EXEEXT) \
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	migsel_split_ind_list$(EXEEXT) \
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	bneck_selection_ind$(EXEEXT) \
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	diploid_ind_2locus$(EXEEXT) \
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	K_linked_regions_multilocus$(EXEEXT) \
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	K_linked_regions_extensions$(EXEEXT) \
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	HOC_ind$(EXEEXT)
-@DEBUG_FALSE@@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am__append_1 = -DNDEBUG
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am__append_2 = $(AM_LIBS)
+noinst_PROGRAMS = diploid_ind$(EXEEXT) diploid_binaryIO_ind$(EXEEXT) \
+	diploid_gzbinaryIO_ind$(EXEEXT) diploid_fixed_sh_ind$(EXEEXT) \
+	migsel_ind$(EXEEXT) migsel_split_ind_list$(EXEEXT) \
+	bneck_selection_ind$(EXEEXT) diploid_ind_2locus$(EXEEXT) \
+	K_linked_regions_multilocus$(EXEEXT) \
+	K_linked_regions_extensions$(EXEEXT) HOC_ind$(EXEEXT)
+@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am__append_1 = -DHAVE_LIBSEQUENCE
+@DEBUG_FALSE@am__append_2 = -DNDEBUG
 subdir = examples
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/ax_cxx_compile_stdxx_11.m4 \
@@ -111,68 +106,51 @@ CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 PROGRAMS = $(noinst_PROGRAMS)
-am__HOC_ind_SOURCES_DIST = HOC_ind.cc
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am_HOC_ind_OBJECTS = HOC_ind.$(OBJEXT)
+am_HOC_ind_OBJECTS = HOC_ind.$(OBJEXT)
 HOC_ind_OBJECTS = $(am_HOC_ind_OBJECTS)
 HOC_ind_LDADD = $(LDADD)
 HOC_ind_DEPENDENCIES =
-am__K_linked_regions_extensions_SOURCES_DIST =  \
-	K_linked_regions_extensions.cc common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am_K_linked_regions_extensions_OBJECTS = K_linked_regions_extensions.$(OBJEXT)
+am_K_linked_regions_extensions_OBJECTS =  \
+	K_linked_regions_extensions.$(OBJEXT)
 K_linked_regions_extensions_OBJECTS =  \
 	$(am_K_linked_regions_extensions_OBJECTS)
 K_linked_regions_extensions_LDADD = $(LDADD)
 K_linked_regions_extensions_DEPENDENCIES =
-am__K_linked_regions_multilocus_SOURCES_DIST =  \
-	K_linked_regions_multilocus.cc common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am_K_linked_regions_multilocus_OBJECTS = K_linked_regions_multilocus.$(OBJEXT)
+am_K_linked_regions_multilocus_OBJECTS =  \
+	K_linked_regions_multilocus.$(OBJEXT)
 K_linked_regions_multilocus_OBJECTS =  \
 	$(am_K_linked_regions_multilocus_OBJECTS)
 K_linked_regions_multilocus_LDADD = $(LDADD)
 K_linked_regions_multilocus_DEPENDENCIES =
-am__bneck_selection_ind_SOURCES_DIST = bneck_selection_ind.cc \
-	common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am_bneck_selection_ind_OBJECTS = bneck_selection_ind.$(OBJEXT)
+am_bneck_selection_ind_OBJECTS = bneck_selection_ind.$(OBJEXT)
 bneck_selection_ind_OBJECTS = $(am_bneck_selection_ind_OBJECTS)
 bneck_selection_ind_LDADD = $(LDADD)
 bneck_selection_ind_DEPENDENCIES =
-am__diploid_binaryIO_ind_SOURCES_DIST = diploid_binaryIO_ind.cc \
-	common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am_diploid_binaryIO_ind_OBJECTS = diploid_binaryIO_ind.$(OBJEXT)
+am_diploid_binaryIO_ind_OBJECTS = diploid_binaryIO_ind.$(OBJEXT)
 diploid_binaryIO_ind_OBJECTS = $(am_diploid_binaryIO_ind_OBJECTS)
 diploid_binaryIO_ind_LDADD = $(LDADD)
 diploid_binaryIO_ind_DEPENDENCIES =
-am__diploid_fixed_sh_ind_SOURCES_DIST = diploid_fixed_sh_ind.cc \
-	common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am_diploid_fixed_sh_ind_OBJECTS = diploid_fixed_sh_ind.$(OBJEXT)
+am_diploid_fixed_sh_ind_OBJECTS = diploid_fixed_sh_ind.$(OBJEXT)
 diploid_fixed_sh_ind_OBJECTS = $(am_diploid_fixed_sh_ind_OBJECTS)
 diploid_fixed_sh_ind_LDADD = $(LDADD)
 diploid_fixed_sh_ind_DEPENDENCIES =
-am__diploid_gzbinaryIO_ind_SOURCES_DIST = diploid_gzbinaryIO_ind.cc \
-	common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am_diploid_gzbinaryIO_ind_OBJECTS = diploid_gzbinaryIO_ind.$(OBJEXT)
+am_diploid_gzbinaryIO_ind_OBJECTS = diploid_gzbinaryIO_ind.$(OBJEXT)
 diploid_gzbinaryIO_ind_OBJECTS = $(am_diploid_gzbinaryIO_ind_OBJECTS)
 diploid_gzbinaryIO_ind_LDADD = $(LDADD)
 diploid_gzbinaryIO_ind_DEPENDENCIES =
-am__diploid_ind_SOURCES_DIST = diploid_ind.cc common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am_diploid_ind_OBJECTS = diploid_ind.$(OBJEXT)
+am_diploid_ind_OBJECTS = diploid_ind.$(OBJEXT)
 diploid_ind_OBJECTS = $(am_diploid_ind_OBJECTS)
 diploid_ind_LDADD = $(LDADD)
 diploid_ind_DEPENDENCIES =
-am__diploid_ind_2locus_SOURCES_DIST = diploid_ind_2locus.cc \
-	common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am_diploid_ind_2locus_OBJECTS = diploid_ind_2locus.$(OBJEXT)
+am_diploid_ind_2locus_OBJECTS = diploid_ind_2locus.$(OBJEXT)
 diploid_ind_2locus_OBJECTS = $(am_diploid_ind_2locus_OBJECTS)
 diploid_ind_2locus_LDADD = $(LDADD)
 diploid_ind_2locus_DEPENDENCIES =
-am__migsel_ind_SOURCES_DIST = migsel_ind.cc common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am_migsel_ind_OBJECTS = migsel_ind.$(OBJEXT)
+am_migsel_ind_OBJECTS = migsel_ind.$(OBJEXT)
 migsel_ind_OBJECTS = $(am_migsel_ind_OBJECTS)
 migsel_ind_LDADD = $(LDADD)
 migsel_ind_DEPENDENCIES =
-am__migsel_split_ind_list_SOURCES_DIST = migsel_split_ind_list.cc \
-	common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am_migsel_split_ind_list_OBJECTS = migsel_split_ind_list.$(OBJEXT)
+am_migsel_split_ind_list_OBJECTS = migsel_split_ind_list.$(OBJEXT)
 migsel_split_ind_list_OBJECTS = $(am_migsel_split_ind_list_OBJECTS)
 migsel_split_ind_list_LDADD = $(LDADD)
 migsel_split_ind_list_DEPENDENCIES =
@@ -224,17 +202,14 @@ SOURCES = $(HOC_ind_SOURCES) $(K_linked_regions_extensions_SOURCES) \
 	$(diploid_gzbinaryIO_ind_SOURCES) $(diploid_ind_SOURCES) \
 	$(diploid_ind_2locus_SOURCES) $(migsel_ind_SOURCES) \
 	$(migsel_split_ind_list_SOURCES)
-DIST_SOURCES = $(am__HOC_ind_SOURCES_DIST) \
-	$(am__K_linked_regions_extensions_SOURCES_DIST) \
-	$(am__K_linked_regions_multilocus_SOURCES_DIST) \
-	$(am__bneck_selection_ind_SOURCES_DIST) \
-	$(am__diploid_binaryIO_ind_SOURCES_DIST) \
-	$(am__diploid_fixed_sh_ind_SOURCES_DIST) \
-	$(am__diploid_gzbinaryIO_ind_SOURCES_DIST) \
-	$(am__diploid_ind_SOURCES_DIST) \
-	$(am__diploid_ind_2locus_SOURCES_DIST) \
-	$(am__migsel_ind_SOURCES_DIST) \
-	$(am__migsel_split_ind_list_SOURCES_DIST)
+DIST_SOURCES = $(HOC_ind_SOURCES) \
+	$(K_linked_regions_extensions_SOURCES) \
+	$(K_linked_regions_multilocus_SOURCES) \
+	$(bneck_selection_ind_SOURCES) $(diploid_binaryIO_ind_SOURCES) \
+	$(diploid_fixed_sh_ind_SOURCES) \
+	$(diploid_gzbinaryIO_ind_SOURCES) $(diploid_ind_SOURCES) \
+	$(diploid_ind_2locus_SOURCES) $(migsel_ind_SOURCES) \
+	$(migsel_split_ind_list_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -297,7 +272,7 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
-LIBS = @LIBS@ $(am__append_2)
+LIBS = @LIBS@ $(AM_LIBS)
 LTLIBOBJS = @LTLIBOBJS@
 MAINT = @MAINT@
 MAKEINFO = @MAKEINFO@
@@ -361,22 +336,21 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 
 #	migsel_split_ind 
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@diploid_ind_SOURCES = diploid_ind.cc common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@diploid_binaryIO_ind_SOURCES = diploid_binaryIO_ind.cc common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@diploid_gzbinaryIO_ind_SOURCES = diploid_gzbinaryIO_ind.cc common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@diploid_fixed_sh_ind_SOURCES = diploid_fixed_sh_ind.cc common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@migsel_ind_SOURCES = migsel_ind.cc common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@migsel_split_ind_list_SOURCES = migsel_split_ind_list.cc common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@bneck_selection_ind_SOURCES = bneck_selection_ind.cc common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@diploid_ind_2locus_SOURCES = diploid_ind_2locus.cc common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@K_linked_regions_multilocus_SOURCES = K_linked_regions_multilocus.cc common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@K_linked_regions_extensions_SOURCES = K_linked_regions_extensions.cc common_ind.hpp
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@HOC_ind_SOURCES = HOC_ind.cc
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@AM_CPPFLAGS = -Wall \
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	-W -I. \
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	$(am__append_1)
-@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@LDADD = 
+diploid_ind_SOURCES = diploid_ind.cc common_ind.hpp
+diploid_binaryIO_ind_SOURCES = diploid_binaryIO_ind.cc common_ind.hpp
+diploid_gzbinaryIO_ind_SOURCES = diploid_gzbinaryIO_ind.cc common_ind.hpp
+diploid_fixed_sh_ind_SOURCES = diploid_fixed_sh_ind.cc common_ind.hpp
+migsel_ind_SOURCES = migsel_ind.cc common_ind.hpp
+migsel_split_ind_list_SOURCES = migsel_split_ind_list.cc common_ind.hpp
+bneck_selection_ind_SOURCES = bneck_selection_ind.cc common_ind.hpp
+diploid_ind_2locus_SOURCES = diploid_ind_2locus.cc common_ind.hpp
+K_linked_regions_multilocus_SOURCES = K_linked_regions_multilocus.cc common_ind.hpp
+K_linked_regions_extensions_SOURCES = K_linked_regions_extensions.cc common_ind.hpp
+HOC_ind_SOURCES = HOC_ind.cc
+AM_CPPFLAGS = -Wall -W -I. $(am__append_2)
+AM_CXXFLAGS = $(am__append_1)
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@AM_LIBS = -lsequence
+LDADD = 
 all: all-am
 
 .SUFFIXES:
