Test builds with c++14.  Allow examples to be built without libsequence. (#61)

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ matrix:
     include:
     - os: linux
       dist: trusty
-      env: USECONDA=1
+      env: 
+         - CXXSTANDARD="c++11"
+         - USECONDA=1
    # works on Precise and Trusty
     - os: linux
       dist: trusty
@@ -15,8 +17,21 @@ matrix:
             - g++-5
       env:
          - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+         - CXXSTANDARD="c++11"
 
-    # works on Precise and Trusty
+    - os: linux
+      dist: trusty
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+      env:
+         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+         - CXXSTANDARD="c++14"
+
+   # works on Precise and Trusty
     - os: linux
       dist: trusty
       addons:
@@ -27,6 +42,69 @@ matrix:
             - g++-6
       env:
         - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+        - CXXSTANDARD="c++11"
+
+    - os: linux
+      dist: trusty
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env:
+        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+        - CXXSTANDARD="c++14"
+    # works on Precise and Trusty
+    # - os: linux
+    #   dist: trusty
+    #   addons:
+    #     apt:
+    #       sources:
+    #         - ubuntu-toolchain-r-test
+    #         - llvm-toolchain-precise-3.8
+    #       packages:
+    #         - clang-3.8
+    #   env:
+    #     - MATRIX_EVAL="CC=clang-3.8 && CXX=clang++-3.8 && USECLANG=1"
+
+    # - os: linux
+    #   dist: trusty
+    #   addons:
+    #     apt:
+    #       sources:
+    #         - llvm-toolchain-trusty-3.9
+    #       packages:
+    #         - clang-3.9
+    #   env:
+    #     - MATRIX_EVAL="CC=clang-3.9 && CXX=clang++-3.9"
+
+    # # works on Trusty
+    # - os: linux
+    #   dist: trusty
+    #   addons:
+    #     apt:
+    #       sources:
+    #         - llvm-toolchain-trusty-4.0
+    #       packages:
+    #         - clang-4.0
+    #   env:
+    #     - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
+
+    # # works on Trusty
+    # - os: linux
+    #   dist: trusty
+    #   addons:
+    #     apt:
+    #       sources:
+    #         - llvm-toolchain-trusty-5.0
+    #       packages:
+    #         - clang-5.0
+    #   env:
+    #     - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
+
+before_install:
+    - eval "${MATRIX_EVAL}"
 #     - os: osx 
 #       osx_image: xcode8.2
 #     - os: osx 
