--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -319,6 +319,7 @@ pkginclude_HEADERS = debug.hpp \
 	mutation.hpp \
 	mutation.tcc \
 	poisson_xover.hpp \
+	general_rec_variation.hpp \
 	recombination.hpp \
 	recombination.tcc \
 	sample_diploid.hpp \
