new example program added

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -8,6 +8,7 @@ noinst_PROGRAMS=	diploid_ind \
 	diploid_ind_2locus \
 	K_linked_regions_multilocus \
 	K_linked_regions_extensions \
+	K_linked_regions_generalized_rec \
 	HOC_ind 
 
 #	migsel_split_ind 
@@ -22,6 +23,7 @@ bneck_selection_ind_SOURCES=bneck_selection_ind.cc common_ind.hpp
 diploid_ind_2locus_SOURCES=diploid_ind_2locus.cc common_ind.hpp
 K_linked_regions_multilocus_SOURCES=K_linked_regions_multilocus.cc common_ind.hpp
 K_linked_regions_extensions_SOURCES=K_linked_regions_extensions.cc common_ind.hpp
+K_linked_regions_generalized_rec_SOURCES=K_linked_regions_generalized_rec.cc common_ind.hpp
 HOC_ind_SOURCES=HOC_ind.cc
 
 AM_CPPFLAGS=-Wall -W -I.
