remove namespace KTfwd::experimental.  Resolves #85.

--- a/fwdpp/Makefile.am
+++ b/fwdpp/Makefile.am
@@ -1,6 +1,6 @@
 pkgincludedir=$(prefix)/include/fwdpp
 
-SUBDIRS=internal tags sugar experimental extensions
+SUBDIRS=internal tags sugar extensions
 pkginclude_HEADERS=debug.hpp \
 	diploid.hh \
 	fitness_models.hpp \
