--- a/Makefile.in
+++ b/Makefile.in
@@ -301,9 +301,9 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS = fwdpp examples testsuite experimental_examples src
+SUBDIRS = fwdpp examples testsuite src
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST = doc/fwdpp.doxygen examples/*.cc examples/*.hpp experimental_examples/*.cc python_examples/*.cc python_examples/*.py LICENSE experimental_examples/*.cc
+EXTRA_DIST = doc/fwdpp.doxygen examples/*.cc examples/*.hpp python_examples/*.cc python_examples/*.py LICENSE 
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
