move serialize_mutation/deserialize_mutation to new header

--- a/fwdpp/io/Makefile.am
+++ b/fwdpp/io/Makefile.am
@@ -1,4 +1,5 @@
 pkgincludedir=$(prefix)/include/fwdpp/io
 
-pkginclude_HEADERS=scalar_serialization.hpp
+pkginclude_HEADERS=scalar_serialization.hpp \
+				   mutation.hpp
 
