--- a/fwdpp/io/Makefile.in
+++ b/fwdpp/io/Makefile.in
@@ -264,7 +264,9 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-pkginclude_HEADERS = scalar_serialization.hpp
+pkginclude_HEADERS = scalar_serialization.hpp \
+				   mutation.hpp
+
 all: all-am
 
 .SUFFIXES:
