move diploid serialization types to their own header

--- a/fwdpp/io/Makefile.am
+++ b/fwdpp/io/Makefile.am
@@ -1,5 +1,6 @@
 pkgincludedir=$(prefix)/include/fwdpp/io
 
 pkginclude_HEADERS=scalar_serialization.hpp \
-				   mutation.hpp
+				   mutation.hpp \
+				   diploid.hpp 
 
