--- a/fwdpp/io/Makefile.in
+++ b/fwdpp/io/Makefile.in
@@ -265,7 +265,8 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 pkginclude_HEADERS = scalar_serialization.hpp \
-				   mutation.hpp
+				   mutation.hpp \
+				   diploid.hpp 
 
 all: all-am
 
