add support for ADL-based serialization of gametes

--- a/fwdpp/io/Makefile.am
+++ b/fwdpp/io/Makefile.am
@@ -2,5 +2,6 @@ pkgincludedir=$(prefix)/include/fwdpp/io
 
 pkginclude_HEADERS=scalar_serialization.hpp \
 				   mutation.hpp \
+				   gamete.hpp \
 				   diploid.hpp 
 
