start moving serialization code from sugar into main library

--- a/fwdpp/sugar/Makefile.in
+++ b/fwdpp/sugar/Makefile.in
@@ -307,7 +307,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = gsl poptypes sampling
-pkginclude_HEADERS = sugar.hpp serialization.hpp singlepop.hpp metapop.hpp multiloc.hpp GSLrng_t.hpp popgenmut.hpp infsites.hpp sampling.hpp generalmut.hpp demography.hpp add_mutation.hpp change_neutral.hpp matrix.hpp matrix_details.hpp
+pkginclude_HEADERS = sugar.hpp singlepop.hpp metapop.hpp multiloc.hpp GSLrng_t.hpp popgenmut.hpp infsites.hpp sampling.hpp generalmut.hpp demography.hpp add_mutation.hpp change_neutral.hpp matrix.hpp matrix_details.hpp
 all: all-recursive
 
 .SUFFIXES:
