--- a/fwdpp/sugar/poptypes/Makefile.in
+++ b/fwdpp/sugar/poptypes/Makefile.in
@@ -264,7 +264,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-pkginclude_HEADERS = tags.hpp popbase.hpp singlepop.hpp metapop.hpp multiloc.hpp
+pkginclude_HEADERS = tags.hpp popbase.hpp singlepop.hpp multiloc.hpp
 all: all-am
 
 .SUFFIXES:
