update build system to accomodate new file

--- a/fwdpp/Makefile.am
+++ b/fwdpp/Makefile.am
@@ -18,7 +18,8 @@ pkginclude_HEADERS=debug.hpp \
 	util.hpp \
 	sugar.hpp \
 	version.hpp \
-	mutate_recombine.hpp
+	mutate_recombine.hpp \
+	recbinder.hpp
 
 
 
